--- a/RestfulService/pom.xml
+++ b/RestfulService/pom.xml
@@ -93,7 +93,13 @@
             <version>2.1</version>
             <type>jar</type>
         </dependency>
-
+        
+        <dependency>
+            <groupId>org.jfree</groupId>
+            <artifactId>jfreechart</artifactId>
+            <version>1.0.19</version>
+        </dependency>
+        
     </dependencies>
     <properties>
         <jersey.version>2.26</jersey.version>
