finished step1, working on step2

--- a/RestfulService/pom.xml
+++ b/RestfulService/pom.xml
@@ -100,6 +100,11 @@
             <version>1.0.19</version>
         </dependency>
         
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-sqs</artifactId>
+            <version>1.11.220</version>
+        </dependency>
     </dependencies>
     <properties>
         <jersey.version>2.26</jersey.version>
